sonarqube-service-route.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
spec:
  selector:
    app: sonarqube
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonarqube
spec:
  to:
    kind: Service
    name: sonarqube
  port:
    targetPort: 9000
